--- a/references.bib
+++ b/references.bib
@@ -62,4 +62,44 @@
   isbn      = {978-3-030-44246-0}
 }
 
+@article{changbao_second_order,
+  title={Simulation-based randomized systematic PPS sampling under substitution of units},
+  author={Thompson, Mary E and Wu, Changbao},
+  journal={Survey Methodology},
+  volume={34},
+  number={1},
+  pages={3},
+  year={2008},
+  publisher={Citeseer}
+}
 
+@article{jackknife_weights,
+  title={Variance estimation for complex surveys using replication techniques},
+  author={Rust, Keith and Rao, J. N. K.},
+  journal={Statistical Methods in Medical Research},
+  volume={5},
+  number={3},
+  pages={283--310},
+  year={1996},
+  publisher={SAGE Publications},
+  doi={10.1177/096228029600500305}
+}
+
+@article{RaoWuYue1992,
+  author  = {Rao, J. N. K. and Wu, C. F. J. and Yue, K.},
+  title   = {Some Recent Work on Resampling Methods for Complex Surveys},
+  journal = {Survey Methodology},
+  year    = {1992},
+  volume  = {18},
+  pages   = {209--217}
+}
+
+@book{wolter,
+  title     = {Introduction to Variance Estimation},
+  author    = {Kirk M. Wolter},
+  year      = {2007},
+  publisher = {Springer New York, NY},
+  series    = {Springer Series in Statistics},
+  doi       = {10.1007/978-0-387-35099-8},
+  isbn      = {978-0-387-32917-8},
+}
